# app/Http/Controllers/Api/CategorieController.php
@@ -3,7 +3,9 @@
 namespace App\Http\Controllers\Api;
 
 use App\Http\Controllers\Controller;
+use App\Http\Resources\CategoryResource;
 use App\Models\Category;
+use Illuminate\Http\Request;
 
 /**
  * @group Gestion des catégories
@@ -18,14 +20,62 @@ class CategorieController extends Controller
      */
     public function index()
     {
-        $Categories = Category::all();
+        $Categories = CategoryResource::collection(Category::all());
 
         return self::apiResponse(true, "", $Categories);
     }
 
-    public function create()
+    public function store(Request $request)
     {
-        return self::apiResponse(true, "");
+        try {
+            $request->validate([
+                'name' => 'required|string|max:255',
+            ]);
+            $category = Category::firstOrCreate([
+                'name' => $request->name,
+            ]);
+            return self::apiResponse(true, "Categorie crée avec succès", $category, 201);
+        } catch (\Exception $e) {
+            return self::apiResponse(false, "Une erreur est survenue", ['error' => $e->getMessage()]);
+        }
+    }
+
+    public function show(string $id)
+    {
+        $category = Category::find($id);
+        return self::apiResponse(true, "", $category, 200);
+    }
+
+    public function update(Request $request, string $id)
+    {
+        try {
+            if ($request->isNotFilled(['name'])) {
+                return self::apiResponse(false, "Aucune donnée fournie pour la mise à jour", status: 200);
+            }
+
+            $request->validate([
+                'name' => 'nullable|string|max:255',
+            ]);
+            $category = Category::find($id);
+            if(!$category) {
+                return self::apiResponse(false, "La categorie n'existe pas");
+            }
+
+            $category->update([
+                'name' => $request->name
+            ]);
+
+            return self::apiResponse(true, "Categorie mise a jour avec succès", ['category' => $category]);
+        } catch (\Exception $e) {
+            return self::apiResponse(false, "Une error est survenue", ['error' => $e->getMessage()], status: 500);
+        }
+    }
+
+    public function destroy(string $id) {
+        $category = Category::find($id);
+        $category->delete();
+
+        return self::apiResponse(true, "Categorie supprimée avec succès");
     }
 
     public static function apiResponse($success, $message, $data = [], $status = 200)
